# jpcsnud

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix  rustfmt.toml  tailwind.css
.cargo/: config.toml
assets/: tailwind.css
backend/: Cargo.toml
backend/migrations/: 20251115063605_create_tables.sql
backend/scripts/: sql.sh
backend/src/: auth.rs  error.rs  main.rs
backend/tests/: auth.hurl
helper/: Cargo.toml
helper/src/: main.rs
src/: main.rs  model.rs
src/components/: avatar.rs  badge.rs  button.rs  card.rs  checkbox.rs  dialog.rs  dropdown_menu.rs  input.rs  label.rs  mod.rs  navbar.rs  page_header.rs  radio_group.rs  select.rs  separator.rs  sheet.rs  sonner.rs  table.rs  tabs.rs  textarea.rs
src/contexts/: mod.rs
src/pages/: home.rs
