[package]
name = "jpcsnud-portal"
version = "0.1.0"
authors = ["Aishen Reemo <aishenreemo@tilde.club>"]
edition = "2021"

[dependencies]
chrono = "0.4.42"
dioxus = { version = "0.6.0", features = ["router"] }
lucide-rust = { version = "0.1.5", features = ["dioxus", "all-icons"] }

[features]
default = ["web"]
web = ["dioxus/web"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace]
members = [ "backend", ".", "helper" ]
